Auto slideshow by time.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/slides.css">
 <style>
   body,
   h1,
@@ -85,9 +86,21 @@
       <div class="w3-third w3-container w3-margin-bottom item slide-container">
 
         <!-- first photo -->
-        <div class="slide">
+        <div class="slide fade">
 
           <img src="resources/czip/img1.jpg" style="width:100%" class="w3-hover-opacity">
+
+        </div>
+
+        <div class="slide fade">
+
+          <img src="resources/czip/img2.jpg" style="width:100%" class="w3-hover-opacity">
+
+        </div>
+        
+        <div class="slide fade">
+
+          <img src="resources/czip/img3.jpg" style="width:100%" class="w3-hover-opacity">
 
         </div>
 
@@ -305,6 +318,8 @@
       document.getElementById("myOverlay").style.display = "none";
     }
   </script>
+
+  <script src="js/slides.js"></script>
 
 </body>
 
