Test images deleted, added contact info in icons

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </div>
     <div class="w3-panel w3-large">
       <i class="fa fa-whatsapp w3-hover-opacity"></i>
-      <i class="fa fa-github w3-hover-opacity"></i>
-      <i class="fa fa-telegram w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
+      <a href="http://www.github.com/luis5648" target="_blank"> <i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://t.me/luisRoman363" target="_blank"><i class="fa fa-telegram w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/luis-román-2426a817b"target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     </div>
   </nav>
 
@@ -97,7 +97,7 @@
           <img src="resources/czip/img2.jpg" style="width:100%" class="w3-hover-opacity">
 
         </div>
-        
+
         <div class="slide fade">
 
           <img src="resources/czip/img3.jpg" style="width:100%" class="w3-hover-opacity">
