CodeZip section completed

--- a/index.html
+++ b/index.html
@@ -88,26 +88,44 @@
         <!-- first photo -->
         <div class="slide fade">
 
-          <img src="resources/czip/img1.jpg" style="width:100%" class="w3-hover-opacity">
+          <img src="resources/czip/img1.png" style="width:100%" class="w3-hover-opacity">
 
         </div>
 
         <div class="slide fade">
 
-          <img src="resources/czip/img2.jpg" style="width:100%" class="w3-hover-opacity">
+          <img src="resources/czip/img2.png" style="width:100%" class="w3-hover-opacity">
 
         </div>
 
         <div class="slide fade">
 
-          <img src="resources/czip/img3.jpg" style="width:100%" class="w3-hover-opacity">
+          <img src="resources/czip/img3.png" style="width:100%" class="w3-hover-opacity">
+
+        </div>
+
+        <div class="slide fade">
+
+          <img src="resources/czip/img4.png" style="width:100%" class="w3-hover-opacity">
+
+        </div>
+
+        <div class="slide fade">
+
+          <img src="resources/czip/img5.png" style="width:100%" class="w3-hover-opacity">
 
         </div>
 
         <div class="w3-container w3-white">
-          <p><b>Lorem Ipsum</b></p>
-          <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
-            congue gravida diam non fringilla.</p>
+          <p><b>Code.Zip </b></p>
+          <p>Web system made to teach programming among classmates of the UDG with tutorships</p>
+          <p>Languages used:</p>
+          <ul>
+            <li>PHP</li>
+            <li>HTML5</li>
+            <li>Javascript</li>
+            <li>Mysql</li>
+          </ul>
         </div>
 
       </div>
