Style and about content changed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   }
 
   .item {
-    border: solid black;
+    border-right: solid black;
   }
 </style>
 
@@ -45,7 +45,6 @@
           class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
     </div>
     <div class="w3-panel w3-large">
-      <i class="fa fa-whatsapp w3-hover-opacity"></i>
       <a href="http://www.github.com/luis5648" target="_blank"> <i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://t.me/luisRoman363" target="_blank"><i class="fa fa-telegram w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/luis-román-2426a817b"target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
@@ -132,9 +131,10 @@
       <div class="w3-third w3-container w3-margin-bottom item">
         <img src="/w3images/lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b>Lorem Ipsum</b></p>
-          <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue
-            gravida diam non fringilla.</p>
+          <p><b>Gestión de equipo</b></p>
+          <p>
+            This project was created with the purpose of put order in a computer repair station. it saves all the information about every single machine, their owner, and the reason why is in the repair station. it also creates a report with the solution, the issue of the computer and who was the repairman
+          </p>
         </div>
       </div>
       <div class="w3-third w3-container item">
@@ -150,11 +150,10 @@
 
     <div class="w3-container w3-padding-large" style="margin-bottom:32px">
       <h4 id="about"><b>About Me</b></h4>
-      <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem
-        ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum.
-        Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt
-        sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non
-        fringilla.</p>
+      <p>
+       I'm a software developer, a technology lover and a free software enthusiast. I made this page with the purpose of show my most important projects that i've make in my carreer as a developer.
+       To develop software, design it and all the things related with, is more for my that just a job, is one of my favourite hobbie, i think, Who's going to be borred creating some new stuff?  
+      </p>
       <hr>
 
       <h4>Technical Skills</h4>
