--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="shortcut icon" href="resources/icons/icon.png" type="image/x-icon">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/slides.css">
@@ -238,89 +239,22 @@
       <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
         <div class="w3-third w3-dark-grey">
           <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-          <p>email@email.com</p>
+          <p>romnluis@yahoo.com</p>
         </div>
         <div class="w3-third w3-teal">
           <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
-          <p>Chicago, US</p>
+          <p>El Salto jal, MX</p>
         </div>
         <div class="w3-third w3-dark-grey">
-          <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
-          <p>512312311</p>
+          <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
+          <p><a href="https://t.me/luisRoman363" target="_blank">@luisRoman363</a> </p>
         </div>
       </div>
-      <hr class="w3-opacity">
-      <form action="/action_page.php" target="_blank">
-        <div class="w3-section">
-          <label>Name</label>
-          <input class="w3-input w3-border" type="text" name="Name" required>
-        </div>
-        <div class="w3-section">
-          <label>Email</label>
-          <input class="w3-input w3-border" type="text" name="Email" required>
-        </div>
-        <div class="w3-section">
-          <label>Message</label>
-          <input class="w3-input w3-border" type="text" name="Message" required>
-        </div>
-        <button type="submit" class="w3-button w3-black w3-margin-bottom"><i
-            class="fa fa-paper-plane w3-margin-right"></i>Send Message</button>
-      </form>
     </div>
-
-    <!-- Footer -->
-    <footer class="w3-container w3-padding-32 w3-dark-grey">
-      <div class="w3-row-padding">
-        <div class="w3-third">
-          <h3>FOOTER</h3>
-          <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue
-            gravida diam non fringilla.</p>
-          <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-        </div>
-
-        <div class="w3-third">
-          <h3>BLOG POSTS</h3>
-          <ul class="w3-ul w3-hoverable">
-            <li class="w3-padding-16">
-              <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-              <span class="w3-large">Lorem</span><br>
-              <span>Sed mattis nunc</span>
-            </li>
-            <li class="w3-padding-16">
-              <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-              <span class="w3-large">Ipsum</span><br>
-              <span>Praes tinci sed</span>
-            </li>
-          </ul>
-        </div>
-
-        <div class="w3-third">
-          <h3>POPULAR TAGS</h3>
-          <p>
-            <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">New York</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">London</span>
-            <span class="w3-tag w3-grey w3-small w3-margin-bottom">IKEA</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">NORWAY</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">DIY</span>
-            <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ideas</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">Baby</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">Family</span>
-            <span class="w3-tag w3-grey w3-small w3-margin-bottom">News</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">Clothing</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">Shopping</span>
-            <span class="w3-tag w3-grey w3-small w3-margin-bottom">Sports</span> <span
-              class="w3-tag w3-grey w3-small w3-margin-bottom">Games</span>
-          </p>
-        </div>
-
-      </div>
-    </footer>
 
     <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp"
         title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 
-    <!-- End page content -->
   </div>
 
   <script>
