--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     font-family: "Raleway", sans-serif
   }
 
+  /*
   .item {
-  }
+  }*/
   #more{
     display: none;
   }
@@ -248,9 +249,12 @@
 
       <p>
 
+        <a target="_blank" href="resources/resumes/Resume.pdf">
+
         <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
           <i class="fa fa-download w3-margin-right"></i>Download Resume
         </button>
+        </a>
       </p>
       <hr>
 
@@ -295,7 +299,6 @@
 
   <script src="js/slides.js"></script>
   <script src="js/text.js"></script>
-
 </body>
 
 </html>
