--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
           <p><b>Gestión de equipo</b></p>
           <p>
-            This project was created with the purpose of<span id="dots">...</span><span id="more">put order in a computer repair station. it saves all the information about every single machine, their owner, and the reason why is in the repair station. it also creates a report with the solution, the issue of the computer and who was the repairman</span> 
+            This project was created with the purpose of<span id="dots">...</span><span id="more"> put order in a computer repair station. it saves all the information about every single machine, their owner, and the reason why is in the repair station. it also creates a report with the solution, the issue of the computer and who was the repairman</span> 
             </p>
             <button id="btnTxt" onclick="readM()">Read more</button>
           <p>
@@ -176,7 +176,7 @@
     <div class="w3-container w3-padding-large" style="margin-bottom:32px">
       <h4 id="about"><b>About Me</b></h4>
       <p>
-       I'm a software developer, a technology lover and a free software enthusiast. I made this page with the purpose of show my most important projects that i've make in my carreer as a developer.
+       I'm a software developer, a technology lover and a free software enthusiast. I made this page with the purpose of show my most important projects that i've created in my carreer as a developer.
        To develop software, design it and all the things related with, is more for my that just a job, is one of my favourite hobbie, i think, Who's going to be borred creating some new stuff?  
       </p>
       <hr>
