design changed and repo links added

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- First Photo Grid-->
     <div class="w3-row-padding">
-      <div class="w3-third w3-container w3-margin-bottom item slide-container">
+      <div class="w3-half w3-container w3-margin-bottom item slide-container">
 
         <!-- first photo -->
         <div class="slide fade">
@@ -127,11 +127,13 @@
             <li>Javascript</li>
             <li>Mysql</li>
           </ul>
+
+          <p>Repository: <a href="https://github.com/luis5648/CodeZip" target="_blank">https://github.com/luis5648/CodeZip</a></p>
         </div>
 
       </div>
 
-      <div class="w3-third w3-container w3-margin-bottom item slide-container">
+      <div class="w3-half w3-container w3-margin-bottom item slide-container">
 
         <div class="slideGi fade">
 
@@ -161,8 +163,10 @@
               <li>Python 3</li>
             </ul>
           </p>
+          <p>Repository: <a href="https://github.com/luis5648/gestion_inventarios">https://github.com/luis5648/gestion_inventarios</a></p>
         </div>
       </div>
+      <!--
       <div class="w3-third w3-container item">
         <div class="w3-container w3-white">
           <p><b>Lorem Ipsum</b></p>
@@ -170,6 +174,7 @@
             gravida diam non fringilla.</p>
         </div>
       </div>
+    -->
     </div>
 
 
