--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
       </div>
     </div>
 
-    <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp"
-        title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
-
+    <!--footer-->
+    <div class="w3-black w3-center w3-padding-24"></div>
+    
   </div>
 
   <script>
