--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
       <p>
 
-        <a target="_blank" href="resources/resumes/Resume.pdf">
+        <a target="_blank" href="resources/resumes/cv.pdf">
 
         <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
           <i class="fa fa-download w3-margin-right"></i>Download Resume
