--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         title="close menu">
         <i class="fa fa-remove"></i>
       </a>
-      <img src="resources/photo_2019-09-11_20-54-18.jpg" style="width:45%;" class="w3-round"><br><br>
+      <img src="resources/profile.jpeg" style="width:45%;" class="w3-round"><br><br>
       <h4><b>PORTFOLIO</b></h4>
       <p class="w3-text-grey">By Luis Román</p>
     </div>
@@ -182,7 +182,7 @@
       <h4 id="about"><b>About Me</b></h4>
       <p>
        I'm a software developer, a technology lover and a free software enthusiast. I made this page with the purpose of show my most important projects that i've created in my carreer as a developer.
-       To develop software, design it and all the things related with, is more for my that just a job, is one of my favourite hobbie, i think, Who's going to be borred creating some new stuff?  
+       To develop software, design it and all the things related with, is more for my that just a job, is one of my favourite hobbie, i think, Who's going to be borred creating some new stuff? One of my greatest interest and professional experience are focused on development for automation short scripts in python or bash, but also I love the web design and web back-end development as a hobby in my free time.
       </p>
       <hr>
 
@@ -191,30 +191,46 @@
 
       <p>
 
-        Linux commands
-        <img src="resources/icons/ubuntu-logo.png" width="5%" height="5%">
-        <img src="resources/icons/debian-logo.jpg" width="5%" height="5%">
-        <img src="resources/icons/fedora-logo.png" width="5%" height="5%">
+        Linux commands (CLI & bash scripting)
       </p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:95%">95%</div>
       </div>
 
       <p>
+      <p>
 
-        Python development
+        Linux OS installation (manual & graphical) 
+      </p>
+      <div class="w3-grey">
+        <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:95%">95%</div>
+      </div>
 
-        <img src="resources/icons/python-logo.png" width="5%" height="5%">
+        Linux OS systems administration 
+      </p>
+      <div class="w3-grey">
+        <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:85%">85%</div>
+      </div>
+
+
+      <p>
+        Python scripting 
       </p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:85%">85%</div>
       </div>
 
       <p>
-        Databases (Mysql, Postgresql)
 
-        <img src="resources/icons/mysql-logo.png" width="5%" height="5%">
-        <img src="resources/icons/psql-logo.png" width="5%" height="5%">
+        Python application development 
+      </p>
+      <div class="w3-grey">
+        <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:85%">85%</div>
+      </div>
+
+      <p>
+        Databases knowledge 
+
 
       </p>
       <div class="w3-grey">
@@ -228,11 +244,11 @@
 
       </p>
       <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:80%">80%</div>
+        <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:70%">70%</div>
       </div>
 
       <p>
-        Java development
+        Java (desktop application development) 
 
         <img src="resources/icons/java-logo.png" width="5%" height="5%">
       </p>
@@ -241,12 +257,8 @@
       </div>
 
       <p>
-        Front-end development (Javascript/HTML/CSS)
+        Front-end development (Javascript/HTML/CSS/Reactjs)
 
-        <img src="resources/icons/javascript-logo.png" width="5%" height="5%">
-        <img src="resources/icons/html-logo.png" width="5%" height="5%">
-        <img src="resources/icons/css3-logo.jpg" width="5%" height="5%">
-        <img src="resources/icons/react-logo.png" width="5%" height="5%">
       </p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:50%">50%</div>
@@ -254,7 +266,7 @@
 
       <p>
 
-        <a target="_blank" href="resources/resumes/cv.pdf">
+        <a target="_blank" href="resources/resumes/Resume.pdf">
 
         <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
           <i class="fa fa-download w3-margin-right"></i>Download Resume
@@ -271,7 +283,7 @@
       <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
         <div class="w3-third w3-dark-grey">
           <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-          <p>romnluis@yahoo.com</p>
+          <p><a href="mailto: romnluis@yahoo.com " target="_blank" >romnluis@yahoo.com</a></p>
         </div>
         <div class="w3-third w3-teal">
           <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
