--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
     <div class="w3-container w3-padding-large" style="margin-bottom:32px">
       <h4 id="about"><b>About Me</b></h4>
       <p>
-       I'm a software developer, a technology lover and a free software enthusiast. I made this page with the purpose of show my most important projects that i've created in my carreer as a developer.
-       To develop software, design it and all the things related with, is more for my that just a job, is one of my favourite hobbie, i think, Who's going to be borred creating some new stuff? One of my greatest interest and professional experience are focused on development for automation short scripts in python or bash, but also I love the web design and web back-end development as a hobby in my free time.
+        I'm a software developer, a technology lover and a free software enthusiast. I made this page with the purpose of show my most important projects that I’ve created in my career as a developer. To develop software, design it and all the things related with, is more for my than just a job, is one of my favorite hobbies, I think, who’s going to be bored creating some new stuff? One of my greatest interest and professional experience are focused on development for automation short scripts in python or bash, but also, I love the web design and web back-end development as a hobby in my free time. 
       </p>
       <hr>
 
