--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
           <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
           <p>El Salto jal, MX</p>
         </div>
-        <div class="w3-third w3-dark-grey">
+        <!-- <div class="w3-third w3-dark-grey">
           <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
           <p><a href="https://t.me/luisRoman363" target="_blank">@luisRoman363</a> </p>
-        </div>
+        </div> -->
       </div>
     </div>
 
