--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="w3-panel w3-large">
       <a href="http://www.github.com/luis5648" target="_blank"> <i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://t.me/luisRoman363" target="_blank"><i class="fa fa-telegram w3-hover-opacity"></i></a>
+      <!-- <a href="https://t.me/luisRoman363" target="_blank"><i class="fa fa-telegram w3-hover-opacity"></i></a> -->
       <a href="https://www.linkedin.com/in/luis-román-2426a817b"target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     </div>
   </nav>
@@ -205,6 +205,8 @@
         <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:95%">95%</div>
       </div>
 
+      <p>
+
         Linux OS systems administration 
       </p>
       <div class="w3-grey">
@@ -236,7 +238,7 @@
         <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:85%">85%</div>
       </div>
 
-      <p>
+      <!-- <p>
         PHP development
 
         <img src="resources/icons/php-logo.png" width="5%" height="5%">
@@ -253,14 +255,14 @@
       </p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:60%">60%</div>
-      </div>
+      </div> -->
 
       <p>
         Front-end development (Javascript/HTML/CSS/Reactjs)
 
       </p>
       <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:50%">50%</div>
+        <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:90%">90%</div>
       </div>
 
       <p>
@@ -280,14 +282,14 @@
     <div class="w3-container w3-padding-large w3-grey">
       <h4 id="contact"><b>Contact Me</b></h4>
       <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
-        <div class="w3-third w3-dark-grey">
+        <div class="w3-col w3-dark-grey">
           <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
           <p><a href="mailto: romnluis@yahoo.com " target="_blank" >romnluis@yahoo.com</a></p>
         </div>
-        <div class="w3-third w3-teal">
+        <!-- <div class="w3-half w3-teal">
           <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
           <p>El Salto jal, MX</p>
-        </div>
+        </div> -->
         <!-- <div class="w3-third w3-dark-grey">
           <p><i class="fa fa-telegram w3-xxlarge w3-text-light-grey"></i></p>
           <p><a href="https://t.me/luisRoman363" target="_blank">@luisRoman363</a> </p>
