--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     </header>
 
     <!-- First Photo Grid-->
-    <div class="w3-row-padding">
-      <div class="w3-half w3-container w3-margin-bottom item slide-container">
+    <div class="w3-ro-padding">
+      <div class="w3-third w3-container w3-margin-bottom item slide-container">
 
         <!-- first photo -->
         <div class="slide fade">
@@ -133,7 +133,7 @@
 
       </div>
 
-      <div class="w3-half w3-container w3-margin-bottom item slide-container">
+      <div class="w3-third w3-container w3-margin-bottom item slide-container">
 
         <div class="slideGi fade">
 
@@ -148,7 +148,7 @@
         </div>
         <div class="w3-container w3-white">
 
-          <p><b>Gestión de equipo</b></p>
+          <p><b>Gestión de equipo (inventory system)</b></p>
           <p>
             This project was created with the purpose of<span id="dots">...</span><span id="more"> put order in a computer repair station. it saves all the information about every single machine, their owner, and the reason why is in the repair station. it also creates a report with the solution, the issue of the computer and who was the repairman</span> 
             </p>
@@ -164,6 +164,38 @@
             </ul>
           </p>
           <p>Repository: <a href="https://github.com/luis5648/gestion_inventarios">https://github.com/luis5648/gestion_inventarios</a></p>
+        </div>
+      </div>
+
+      <div class="w3-third w3-container w3-margin-bottom item slide-container">
+
+        <div class="slideGapp fade">
+
+          <img src="resources/Gapp/img1.png" style="width:100%" class="w3-hover-opacity">
+
+        </div>
+
+        <!-- <div class="slideGapp fade">
+
+          <img src="resources/Gapp/img2.png" style="width:100%" class="w3-hover-opacity">
+
+        </div> -->
+        <div class="w3-container w3-white">
+          <p><b>Ghibli films</b></p>
+          <p>
+            This project was created with the purpose of Demonstrate my knowledge about Reactjs using some other technologies like redux and redux-saga 
+            </p>
+          <p>
+            Languages used:
+            <ul>
+              <li>Reactjs</li>
+              <li>Jsx</li>
+              <li>Typescript</li>
+              <li>Redux</li>
+              <li>Redux Saga</li>
+            </ul>
+          </p>
+          <p>Repository: <a href="https://github.com/luis5648/React-API-practice">https://github.com/luis5648/React-API-practice</a></p>
         </div>
       </div>
       <!--
