Profile picture modified

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         title="close menu">
         <i class="fa fa-remove"></i>
       </a>
-      <img src="resources/profile.jpeg" style="width:45%;" class="w3-round"><br><br>
+      <img src="resources/profile.png" style="width:45%;" class="w3-round"><br><br>
       <h4><b>PORTFOLIO</b></h4>
       <p class="w3-text-grey">By Luis Román</p>
     </div>
